atualização de adoção de pet

--- a/protegido/menu.html
+++ b/protegido/menu.html
@@ -18,7 +18,7 @@
             <div class="navbar-nav">
               <a class="nav-link "  href="cadastroInteressados.html">Cadastro de interessados</a>
               <a class="nav-link" href="cadastroPet.html">Cadastro de pets</a>
-              <a class="nav-link" href="#">Adotar um Pet</a>
+              <a class="nav-link" href="/adotar">Adotar um Pet</a>
               <a class="nav-link" href="/logout">Sair</a>
             </div>
           </div>
