--- a/protegido/cadastroInteressados.html
+++ b/protegido/cadastroInteressados.html
@@ -18,7 +18,7 @@
             <div class="navbar-nav">
               <a class="nav-link " href="cadastroInteressados.html">Cadastro de interessados</a>
               <a class="nav-link" href="cadastroPet.html">Cadastro de pets</a>
-              <a class="nav-link" href="#">Adotar um Pet</a>
+              <a class="nav-link" href="/adotar">Adotar um Pet</a>
               <a class="nav-link " href="/logout">Sair</a>
             </div>
           </div>
@@ -44,8 +44,11 @@
                             <input type="text" class="form-control" id="tel" name="tel">
                         </div>
                         <div class="col-12">
-                            <button type="submit" class="btn btn-primary">Cadastrar</button>
+                            <button type="submit" class="btn btn-primary">Cadastrar</button><br>
+                            <a href="/listarInteressados" style="text-align: center; text-decoration: none;">Lista de pessoas interessadas</a>
                         </div>
+
+                        
                     </div>
                 </form>
             </div>
