--- a/protegido/menu.html
+++ b/protegido/menu.html
@@ -17,7 +17,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link "  href="cadastroInteressados.html">Cadastro de interessados</a>
+              <a class="nav-link" href="cadastroInteressados.html">Cadastro de interessados</a>
               <a class="nav-link" href="cadastroPet.html">Cadastro de pets</a>
               <a class="nav-link" href="/adotar">Adotar um Pet</a>
               <a class="nav-link" href="/logout">Sair</a>
@@ -25,5 +25,6 @@
           </div>
         </div>
       </nav>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
